# kse-static-rewrite-proxy

./: .gitignore  Cargo.toml  Dockerfile  README.md  lefthook.yml
.github/workflows/: docker-images.yml  rust-check.yml
.lefthook/commit-msg/: check-conventional-commit.sh
deploy/: sidecar-example.yaml
examples/: config.yaml
src/: admin.rs  config.rs  lib.rs  literal.rs  main.rs  metrics.rs  proxy.rs  rewrite.rs
tests/: config_contract.rs  literal_benchmark.rs  rewrite_policy_contract.rs  streaming_rewriter_contract.rs
