[package]
name = "kse-static-rewrite-proxy"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "Temporary Pingora sidecar for rewriting KSE extension V3 static asset paths"

[dependencies]
async-trait = "0.1"
base64 = "0.22"
blake3 = "1"
bytes = "1"
http = "1"
memchr = "2"
percent-encoding = "2"
pingora = { version = "0.8.1", features = ["proxy"] }
prometheus = "0.13"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "~1.51", features = ["net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2"
yaml_serde = "0.10"

[dev-dependencies]
pretty_assertions = "1"

[profile.release]
lto = "thin"
strip = "symbols"
